--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body class="page">
 
   <header class="header">
-    <div class="logo_place_header"></div>
+    <div class="logo logo_place_header"></div>
     <h1 class="header__title">Научиться учиться</h1>
     <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
       <a href="" class="header__link">Узнать &rarr;</a>
     </p>
-    <img src="./images/header-image.png" alt="Грустный двоечник" class="header__main-illustration">
+    <img src="./images/header-image.png" alt="Мальчик и его семья расстроены плохой оценкой за учебу." class="header__main-illustration">
     <div class="header__square-pic"></div>
   </header>
 
@@ -95,57 +95,57 @@
       <h2 class="feynman__title">Метод Фейнмана</h2>
       <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
       <a href="" class="feynman__link">Подробнее &rarr;</a>
-      <img src="./images/feynman.png" alt="Портрет Фейнмана" class="feynman__image">
+      <img src="./images/feynman.png" alt="Улыбающийся Фейнман." class="feynman__image">
 
     </section>
 
     <section class="kaufman">
 
-      <h2 class="section-title_theme_dark">Принципы обучения</h2>
-      <h3 class="section-subtitle_theme_dark">от Джоша Кауфмана</h3>
-      <ul class="table_theme_dark">
-        <li class="table__cell_theme_dark">
-          <h4 class="table__heading_theme_dark">1</h4>
-          <p class="table__text_theme_dark">Выберите привлекательный проект.</p>
+      <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+      <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+      <ul class="table table_theme_dark">
+        <li class="table__cell table__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">1</h4>
+          <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
         </li>
-        <li class="table__cell_theme_dark">
-          <h4 class="table__heading_theme_dark">2</h4>
-          <p class="table__text_theme_dark">Сосредоточтесь на каком-то одном навыке.</p>
+        <li class="table__cell table__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">2</h4>
+          <p class="table__text table__text_theme_dark">Сосредоточтесь на каком-то одном навыке.</p>
         </li>
-        <li class="table__cell_theme_dark">
-          <h4 class="table__heading_theme_dark">3</h4>
-          <p class="table__text_theme_dark">Определите целевой уровень мастерства.</p>
+        <li class="table__cell table__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">3</h4>
+          <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
         </li>
-        <li class="table__cell_theme_dark">
-          <h4 class="table__heading_theme_dark">4</h4>
-          <p class="table__text_theme_dark">Разбейте навык на элементы.</p>
+        <li class="table__cell table__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">4</h4>
+          <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
         </li>
-        <li class="table__cell_theme_dark">
-          <h4 class="table__heading_theme_dark">5</h4>
-          <p class="table__text_theme_dark">Приготовьте все необходимое для занятий.</p>
+        <li class="table__cell table__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">5</h4>
+          <p class="table__text table__text_theme_dark">Приготовьте все необходимое для занятий.</p>
         </li>
-        <li class="table__cell_theme_dark">
-          <h4 class="table__heading_theme_dark">6</h4>
-          <p class="table__text_theme_dark">Устраните препятствия для занятий.</p>
+        <li class="table__cell table__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">6</h4>
+          <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
         </li>
-        <li class="table__cell_theme_dark">
-          <h4 class="table__heading_theme_dark">7</h4>
-          <p class="table__text_theme_dark">Выделите специальное время для занятий.</p>
+        <li class="table__cell table__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">7</h4>
+          <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
         </li>
-        <li class="table__cell_theme_dark">
-          <h4 class="table__heading_theme_dark">8</h4>
-          <p class="table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+        <li class="table__cell table__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">8</h4>
+          <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
         </li>
-        <li class="table__cell_theme_dark">
-          <h4 class="table__heading_theme_dark">9</h4>
-          <p class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+        <li class="table__cell table__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">9</h4>
+          <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
         </li>
-        <li class="table__cell_theme_dark">
-          <h4 class="table__heading_theme_dark">10</h4>
-          <p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+        <li class="table__cell table__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">10</h4>
+          <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
         </li>
       </ul>
-      <img src="./images/kaufman-triangle.svg" alt="Синий треугольник" class="kaufman__triangle">
+      <div class="kaufman__triangle"></div>
 
     </section>
 
@@ -155,31 +155,31 @@
 
     <div class="footer__columns">
 
-      <div class="footer__column_content_copyright">
-        <div class="logo_place_footer"></div>
-        <p class="footer__author">&copy;Виктор Абанькин</p>
+      <div class="footer__column footer__column_content_copyright">
+        <div class="logo logo_place_footer"></div>
+        <p class="footer__author">&copy; Верещагина Елена</p>
       </div>
 
-      <nav class="footer__column_content_info">
+      <nav class="footer__column footer__column_content_info">
         <h3 class="footer__column-heading">О Практикуме</h3>
         <ul class="footer__column-links">
           <li>
-            <a href="#" class="footer__column-link">Главная</a>
+            <a href="#" class="footer__column-link" target="_blank">Главная</a>
           </li>
           <li>
-            <a href="#" class="footer__column-link">Концепция</a>
+            <a href="#" class="footer__column-link" target="_blank">Концепция</a>
           </li>
           <li>
-            <a href="#" class="footer__column-link">Наставник</a>
+            <a href="#" class="footer__column-link" target="_blank">Наставник</a>
           </li>
         </ul>
       </nav>
 
-      <nav class="footer__column_content_social">
+      <nav class="footer__column footer__column_content_social">
         <h3 class="footer__column-heading">Соцсети</h3>
         <ul class="footer__column-links">
           <li>
-            <a href="#" class="footer__column-link">
+            <a href="#" class="footer__column-link" target="_blank">
               <img src="./images/facebook_color_white.svg" 
               alt="Логотип фейсбук" 
               class="footer__social-icon">
@@ -187,7 +187,7 @@
             </a>
           </li>
           <li>
-            <a href="#" class="footer__column-link">
+            <a href="#" class="footer__column-link" target="_blank">
               <img src="./images/vk_color_white.svg" 
               alt="Логотип ВКонтакте" 
               class="footer__social-icon">
@@ -195,7 +195,7 @@
             </a>
           </li>
           <li>
-            <a href="#" class="footer__column-link">
+            <a href="#" class="footer__column-link" target="_blank">
               <img src="./images/instagram_color_white.svg" 
               alt="Логотип Инстаграм" 
               class="footer__social-icon">
