--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Научиться учиться</title>
 </head>
 
@@ -15,23 +14,21 @@
     <div class="logo logo_place_header"></div>
     <h1 class="header__title">Научиться учиться</h1>
     <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-      <a href="" class="header__link">Узнать &rarr;</a>
+      <a href="" class="header__link link">Узнать &rarr;</a>
     </p>
     <img src="./images/header-image.png" alt="Мальчик и его семья расстроены плохой оценкой за учебу." class="header__main-illustration">
-    <div class="header__square-pic"></div>
+    <div class="header__square-pic rotation"></div>
   </header>
 
   <main class="content">
 
     <section class="description">
-
       <div class="two-columns">
         <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
         <div class="two-columns__main-text">
           <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
             Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест,
-            но
-            часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
+            но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
           </p>
           <p class="two-columns__paragraph">
             <span class="two-columns__span-accent">
@@ -44,11 +41,83 @@
           </p>
         </div>
       </div>
+    </section>
 
+    <section class="techniques">
+      <h2 class="section-title">Техники обучения</h2>
+      <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
+      <ul class="cards">
+        <li class="cards__item">
+          <img src="./images/cards-attention.png" alt="Обложка книги, которую держат в руках." class="cards__image">
+          <h3 class="cards__title">Два вида внимания</h3>
+          <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+        </li>
+        <li class="cards__item">
+          <img src="./images/cards-recall.png" alt="Скульптура задумчивого мальчика." class="cards__image">
+          <h3 class="cards__title">Recall</h3>
+          <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+        </li>
+        <li class="cards__item">
+          <img src="./images/cards-interliving.png" alt="Объемная панорама помещения с людьми." class="cards__image">
+          <h3 class="cards__title">Интерливинг</h3>
+          <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+        </li>
+        <li class="cards__item">
+          <img src="./images/cards-question.png" alt="Человек стоит в помещении с несколькими выходами и множеством окон." class="cards__image">
+          <h3 class="cards__title">Вопросы</h3>
+          <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+        </li>
+        <li class="cards__item">
+          <img src="./images/cards-competence.png" alt="Стопка книг лежит на руке." class="cards__image">
+          <h3 class="cards__title">Иллюзия компетентности</h3>
+          <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+        </li>
+      </ul>
+    </section>
+
+    <section class="video">
+      <h2 class="section-title">Видео нa TED</h2>
+      <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
+      <ul class="video__iframes">
+        <li>
+          <iframe 
+          class="video__iframe"
+          width="515" height="316"
+          src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen>
+          </iframe>
+        </li>
+        <li> 
+          <iframe 
+          class="video__iframe"
+          width="515" height="316" 
+          src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen>
+          </iframe>
+        </li>   
+      </ul>
+    </section>
+
+    <section class="oakley">
+      <div class="two-columns">
+        <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+        <div class="two-columns__main-text">
+          <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным 
+            гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, 
+            да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. 
+            И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», 
+            ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="feynman">
+      <h2 class="feynman__title">Метод Фейнмана</h2>
+      <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+      <a href="" class="feynman__link link">Подробнее &rarr;</a>
+      <img src="./images/feynman.png" alt="Улыбающийся Фейнман." class="feynman__image">
     </section>
 
     <section class="digits">
-
       <h2 class="section-title">Цифры и факты</h2>
       <h3 class="section-subtitle">Про учебу и мозг</h3>
       <ul class="table">
@@ -87,20 +156,26 @@
           <p class="table__text">Открытие условного рефлекса</p>
         </li>
       </ul>
-
     </section>
 
-    <section class="feynman">
-
-      <h2 class="feynman__title">Метод Фейнмана</h2>
-      <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
-      <a href="" class="feynman__link">Подробнее &rarr;</a>
-      <img src="./images/feynman.png" alt="Улыбающийся Фейнман." class="feynman__image">
-
+    <section class="khan">
+      <div class="khan__container">
+        <p class="khan__author">Салман Хан</p>
+        <h2 class="khan__title">Весь мир — школа</h2>
+        <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. 
+          Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить 
+          навыки и знания, которые приносят успех в школе, карьере и жизни.
+        </p>
+        <p class="khan__quote-author">Джордж Лукас</p>
+        <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+        <div class="khan__book-container">
+          <img src="./images/khan-book.jpg" alt="Обложка книги Салмана Хана, на которой изображены разные континенты." class="khan__book-pic">
+          <a href="#" class="khan__buy-link link" target="_blank">Купить книгу &rarr;</a>
+        </div>
+      </div>
     </section>
 
     <section class="kaufman">
-
       <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
       <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
       <ul class="table table_theme_dark">
@@ -145,8 +220,26 @@
           <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
         </li>
       </ul>
-      <div class="kaufman__triangle"></div>
+      <div class="kaufman__triangle rotation"></div>
+    </section>
 
+    <section class="resourses">
+      <h2 class="section-title">Полезные ресурсы</h2>
+      <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
+      <div class="resourses__logo-zone">
+        <a href="#" class="resourses__link link" target="_blank">
+          <img src="./images/logo/resources-arzamas.svg" alt="Логотип Арзамас." class="resourses__logo">
+        </a>
+        <a href="#" class="resourses__link link" target="_blank">
+          <img src="./images/logo/resources-n1.svg" alt="Логотип N+1." class="resourses__logo">
+        </a>
+        <a href="#" class="resourses__link link" target="_blank">
+          <img src="./images/logo/resources-strelka.svg" alt="Логотип Стрелка." class="resourses__logo">
+        </a>
+        <a href="#" class="resourses__link link" target="_blank">
+          <img src="./images/logo/resources-polka.svg" alt="Логотип Полка." class="resourses__logo">
+        </a>
+      </div>
     </section>
 
   </main>
@@ -164,13 +257,13 @@
         <h3 class="footer__column-heading">О Практикуме</h3>
         <ul class="footer__column-links">
           <li>
-            <a href="#" class="footer__column-link" target="_blank">Главная</a>
+            <a href="#" class="footer__column-link link" target="_blank">Главная</a>
           </li>
           <li>
-            <a href="#" class="footer__column-link" target="_blank">Концепция</a>
+            <a href="#" class="footer__column-link link" target="_blank">Концепция</a>
           </li>
           <li>
-            <a href="#" class="footer__column-link" target="_blank">Наставник</a>
+            <a href="#" class="footer__column-link link" target="_blank">Наставник</a>
           </li>
         </ul>
       </nav>
@@ -179,24 +272,24 @@
         <h3 class="footer__column-heading">Соцсети</h3>
         <ul class="footer__column-links">
           <li>
-            <a href="#" class="footer__column-link" target="_blank">
-              <img src="./images/facebook_color_white.svg" 
+            <a href="#" class="footer__column-link link" target="_blank">
+              <img src="./images/logo/facebook_color_white.svg" 
               alt="Логотип фейсбук" 
               class="footer__social-icon">
               Facebook
             </a>
           </li>
           <li>
-            <a href="#" class="footer__column-link" target="_blank">
-              <img src="./images/vk_color_white.svg" 
+            <a href="#" class="footer__column-link link" target="_blank">
+              <img src="./images/logo/vk_color_white.svg" 
               alt="Логотип ВКонтакте" 
               class="footer__social-icon">
               ВКонтакте
             </a>
           </li>
           <li>
-            <a href="#" class="footer__column-link" target="_blank">
-              <img src="./images/instagram_color_white.svg" 
+            <a href="#" class="footer__column-link link" target="_blank">
+              <img src="./images/logo/instagram_color_white.svg" 
               alt="Логотип Инстаграм" 
               class="footer__social-icon">
               Instagram
