--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main class="content">
 
       <section class="description">
-        <article class="two-columns">
+        <div class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
@@ -42,7 +42,7 @@
               сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
             </p>
           </div>
-        </article>
+        </div>
       </section>
 
       <section class="techniques">
@@ -97,7 +97,7 @@
       </section>
 
       <section class="oakley">
-        <article class="two-columns">
+        <div class="two-columns">
           <h2 class="two-columns__brief">История Барбары Оакли.</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным 
@@ -107,7 +107,7 @@
               ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
             </p>
           </div>
-        </article>
+        </div>
       </section>
 
       <section class="feynman">
